2017-01-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 40335: Src/builtin.c, Src/exec.c, Src/zsh.h,
	Test/C04funcdef.ztst: be more careful autoload filename is
	directory, not source location.

	* Jens Elkner: 40333: Src/watch.c: Fix the utmpx interface for
	watch as otherwise it failed on some OSes.

2017-01-11  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 40332: Completion/Zsh/Command/_typeset: completion for new
	autoload features.

2017-01-11  Oliver Kiddle  <opk@zsh.org>

	* 40321: Doc/Zsh/compsys.yo, Src/Zle/computil.c,
	Test/Y03arguments.ztst: _arguments option groups

2017-01-11  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/builtin.c, Src/exec.c: be more careful to free
	memory when updating filename in struct shfunc.

	* 40327 (with minor fixes): Doc/Zsh/builtins.yo,
	README,Src/builtin.c, Src/exec.c, Src/hashtable.c, Src/parse.c,
	Src/zsh.h, Test/C04funcdef.ztst: add ability to autoload
	function from file using full path, with additional related
	autoload options -r, -R, -d and extension to -X.

2017-01-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 40305: Src/Zle/complist.c, Src/Zle/zle_main.c,
	Src/Zle/zle_refresh.c, Src/Zle/zle_thingy.c: fix some problems
	redisplaying command line after interrupts.

	* 40306 with documentation additions: Doc/Zsh/options.yo,
	README, Src/input.c, Src/options.c, Src/parse.c, Src/zsh.h,
	Test/A02alias.ztst: Add ALIAS_FUNC_DEF option and make
	the default behaviour to disallow functions where the
	name is expanded as an alias (unless part of a complete
	function definition within the alias).

2017-01-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40303: Completion/Debian/Command/_bts: Add more subcommands.

2017-01-10  Phil Pennock  <zsh-workers+phil.pennock@spodhuis.org>

	* 40318 (in part): Doc/Zsh/builtins.yo: Document echo \c
	behaviour.

2017-01-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40302: Completion/Unix/Command/_swaks: New _swaks completion
	(common options only).