@@ -1,3 +1,9 @@
+2017-01-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 40342: Src/builtin.c, Src/exec.c, Src/hashtable.c,
+	Src/signals.c, Test/C04funcdef.ztst: add directory name cache
+	for directories recorded for autoload files.
+
 2017-01-12  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* 40335: Src/builtin.c, Src/exec.c, Src/zsh.h,
